// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`falsy number logical and 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    return 0 or 100
end
return ____exports"
`;

exports[`falsy string logical and 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    return \\"\\" or \\"dog\\"
end
return ____exports"
`;
